--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@across-protocol/contracts-v2",
+  "name": "uma-developer-quickstart",
   "version": "0.0.44",
   "author": "UMA Team",
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/across-protocol/across-smart-contracts-v2.git"
+    "url": "git+https://github.com/UMAprotocol.git"
   },
   "files": [
     "/contracts/**/*.sol",
