update repo url
Signed-off-by: Alex Gaines <againes@umaproject.org>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/UMAprotocol.git"
+    "url": "git+https://github.com/UMAprotocol/dev-quickstart.git"
   },
   "files": [
     "/contracts/**/*.sol",
