feat: add EventBasedPredictionMarket (#1)
* feat: add EventBasedPredictionMarket first draft

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* feat: first implementation of EventBasedPredictionMarket and deployment test

* feat: add mint, redeem, expire lifecycle test and fixtures updates

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* feat: add re-request on dispute logic

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* feat: add lifecycle events test

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* refactor: multiple code refactorings to reduce imports and simplify code

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* refactor: remove unnecessary connects

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* refactor: remove unnecessary comments

Signed-off-by: Pablo Maldonado <pablomaldonadoturci@gmail.com>

* feat: remove Fixed point lib usage

Signed-off-by: Salvador Pablo Maldonado Turci <salvadorpablomaldonadoturci@Salvadors-MacBook-Pro.local>

* refactor: remove unnecessary argument in events queryFilter

Signed-off-by: Pablo Maldonado <pablo@umaproject.org>

* refator: rename function

Signed-off-by: Pablo Maldonado <pablo@umaproject.org>

* refactor: hardcode decimals

Signed-off-by: Pablo Maldonado <pablo@umaproject.org>

* refactor: rename function

Signed-off-by: Pablo Maldonado <pablo@umaproject.org>

* refactor: replace 1ether

Signed-off-by: Pablo Maldonado <pablo@umaproject.org>

Co-authored-by: Salvador Pablo Maldonado Turci <salvadorpablomaldonadoturci@Salvadors-MacBook-Pro.local>
Co-authored-by: Pablo Maldonado <pablo@umaproject.org>

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "lint": "yarn prettier --list-different",
     "lint-fix": "yarn prettier --write",
     "prettier": "prettier .",
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "compile": "hardhat compile"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
-    "@uma/common": "^2.17.0",
-    "@uma/contracts-node": "^0.2.0"
+    "@uma/common": "^2.20.0",
+    "@uma/contracts-node": "^0.3.7"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
